--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -8,6 +8,8 @@
 <body>
     <header>
         <h1>Minha Amiga Artista</h1>
+        <p>hdfdhfgjdshgdfsjkghfgjkdf   fhdfgjklhgfghfj fhjdskfhsdshgjkfdsfklghfçlk</p>
+        <p>fhdsjkfghdsfjdfhjdkshfgsdjkghgjkf hgfjghfgjfdkhgfjkghfg gfhgdfhjkghdfgfdhghjfdk</p>
     </header>
     
 </body>
