--- a/index.html
+++ b/index.html
@@ -6,11 +6,32 @@
     <title>2°E Agrinho</title>
 </head>
 <body>
-    <header>
-        <h1>Minha Amiga Artista</h1>
-        <p>hdfdhfgjdshgdfsjkghfgjkdf   fhdfgjklhgfghfj fhjdskfhsdshgjkfdsfklghfçlk</p>
-        <p>fhdsjkfghdsfjdfhjdkshfgsdjkghgjkf hgfjghfgjfdkhgfjkghfg gfhgdfhjkghdfgfdhghjfdk</p>
+
+    <header class="header">
+        <div class="header-title">
+            <h1>**Meu Título Central**</h1>
+        </div>
+        <nav class="nav-buttons">
+            <button onclick="location.href='#secao1'">Conteúdo 1</button>
+            <button onclick="location.href='#secao2'">Conteúdo 2</button>
+            <button onclick="location.href='#secao3'">Conteúdo 3</button>
+        </nav>
     </header>
-    
+
+    <section id="secao1" class="content-section">
+        <h2>Conteúdo da Seção 1</h2>
+        <p>Este é o primeiro conteúdo da sua página.</p>
+    </section>
+
+    <section id="secao2" class="content-section">
+        <h2>Conteúdo da Seção 2</h2>
+        <p>Aqui está o segundo conteúdo da sua página.</p>
+    </section>
+
+    <section id="secao3" class="content-section">
+        <h2>Conteúdo da Seção 3</h2>
+        <p>E este é o terceiro conteúdo da sua página.</p>
+    </section>
+
 </body>
 </html>
